syntax = "proto3";
option go_package=".;proto";
import "google/protobuf/empty.proto";

service User{
          rpc GetUserList(PageInfo) returns (UserListResponse); //用户列表
          rpc GetUserMobile(MobileRequest) returns(UserInfoResponse);//通过mobile查询用户
          rpc GetUserId(IdRequest) returns(UserInfoResponse);//通过id查询用户
          rpc CreatUser(CreatUserInfo) returns(UserInfoResponse); //注册用户
          rpc UpdateUser(updateUserInfo) returns(google.protobuf.Empty);//更新用户
          rpc CheckPassword(PasswordCheckInfo) returns (CheckResponse);//检查密码
}

message CheckResponse{
  bool success =1;
}

message PasswordCheckInfo{
  string  password=1;
  string encryptedPassword=2;
}

message updateUserInfo{
  int32 id=1;
  string nickname=2;
  string gender =3;
  uint64 birthDay=4;
}

message CreatUserInfo{
  string  nickname=1;
  string password=2;
  string mobile=3;
}



message IdRequest{
  int32 id=1;
}


message MobileRequest{
  string mobile=1;
}


message PageInfo{
        uint32 pn=1;
        uint32 pSize=2;
}

message UserInfoResponse{
    int32 id =1;
    string password =2;
    string mobile =3;
    string nickname=4;
    uint64 birthDay=5;
    string gender =6;
    int32 role =7;

}

message UserListResponse{
  int32 total =1;
  repeated UserInfoResponse data =2;
}